[tool.poetry]
name = "option-pricing-models"
version = "0.1.0"
description = "Option pricing model"
authors = ["Yu Chen, Yang <ycy.tai@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
ruff = "^0.4.2"
numpy = "^1.26.4"
scipy = "^1.13.0"
pytest = "^8.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
